--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "argon2": "^0.28.3",
     "bootstrap": "^5.1.3",
     "emotion-theming": "^10.3.0",
     "framer-motion": "^6.2.1",
